<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.socratescl.lostdoge.InfoActivity">

    <TextView
        android:id="@+id/petStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_pet_status"/>
    <Spinner
        android:id="@+id/petStatusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/petStatusTextView"/>
    <TextView
        android:id="@+id/petTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_pet_type"
        android:layout_below="@id/petStatusSpinner"/>
    <Spinner
        android:id="@+id/petTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/petTypeTextView"/>
    <EditText
        android:id="@+id/petNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pet_name"
        android:layout_below="@id/petTypeSpinner"/>
    <EditText
        android:id="@+id/descEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pet_description"
        android:layout_below="@id/petNameEditText"/>
    <TextView
        android:id="@+id/charsLeftTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/descEditText"/>
    <Button
        android:id="@+id/loadPictureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/charsLeftTextView"
        android:text="@string/button_load_picture"/>
    <ImageView
        android:id="@+id/previewImageView"
        android:layout_below="@id/loadPictureButton"
        android:contentDescription="@string/desc_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:visibility="invisible"/>
</RelativeLayout>
